@@ -3,6 +3,10 @@
 	* using CDI library version 1.7.0
 	* Version 1.7.0 released
 
+2015-05-19  Uwe Schulzweida
+
+        * Fldstat2: added support for option --reduce_dim
+
 2015-05-18  Uwe Schulzweida
 
         * splityear*: support for constant fields is missing [Bug #5759]
